[gd_scene load_steps=14 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://audio/And Just Like That.mp3" type="AudioStream" id=2]
[ext_resource path="res://audio/Freesound - win.wav by mehraniiii.tres" type="AudioStream" id=3]
[ext_resource path="res://img/continue.png" type="Texture" id=4]
[ext_resource path="res://img/11.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=5]

[sub_resource type="LineShape2D" id=3]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 240, 60 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://MiSans-Normal.ttf"

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
font_data = SubResource( 6 )

[sub_resource type="AudioStreamMP3" id=11]
data = PoolByteArray( 255, 251, 144, 196, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 88, 105, 110, 103, 0, 0, 0, 15, 0, 0, 0, 18, 0, 0, 17, 75, 0, 9, 9, 9, 9, 9, 26, 26, 26, 26, 26, 26, 43, 43, 43, 43, 43, 54, 54, 54, 54, 54, 54, 78, 78, 78, 78, 78, 104, 104, 104, 104, 104, 104, 118, 118, 118, 118, 118, 134, 134, 134, 134, 134, 134, 151, 151, 151, 151, 151, 162, 162, 162, 162, 162, 162, 176, 176, 176, 176, 176, 176, 189, 189, 189, 189, 189, 202, 202, 202, 202, 202, 202, 216, 216, 216, 216, 216, 227, 227, 227, 227, 227, 227, 237, 237, 237, 237, 237, 249, 249, 249, 249, 249, 249, 255, 255, 255, 255, 255, 0, 0, 0, 57, 76, 65, 77, 69, 51, 46, 57, 57, 114, 2, 165, 0, 0, 0, 0, 44, 162, 0, 0, 20, 70, 36, 4, 192, 66, 0, 0, 70, 0, 0, 17, 75, 46, 168, 178, 222, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 251, 48, 196, 0, 0, 4, 40, 3, 11, 160, 136, 64, 1, 114, 53, 225, 4, 240, 154, 248, 1, 112, 4, 245, 75, 64, 4, 176, 49, 2, 147, 236, 53, 175, 40, 237, 157, 191, 255, 255, 251, 188, 49, 255, 241, 7, 255, 214, 255, 103, 255, 173, 229, 208, 0, 52, 36, 139, 2, 36, 175, 239, 239, 123, 251, 192, 214, 105, 74, 239, 87, 250, 248, 221, 110, 207, 125, 223, 223, 85, 60, 129, 126, 64, 227, 31, 204, 127, 249, 34, 67, 145, 191, 55, 178, 145, 231, 152, 232, 9, 144, 13, 169, 224, 37, 150, 18, 25, 162, 9, 69, 21, 27, 113, 79, 203, 239, 215, 147, 151, 215, 174, 218, 249, 11, 220, 126, 218, 204, 241, 100, 111, 190, 204, 89, 107, 124, 41, 176, 32, 195, 232, 176, 24, 2, 113, 90, 64, 128, 69, 5, 66, 209, 19, 49, 255, 251, 96, 196, 4, 131, 13, 125, 169, 14, 72, 36, 109, 201, 161, 176, 162, 137, 132, 137, 121, 40, 24, 32, 173, 38, 45, 28, 48, 145, 101, 132, 158, 30, 112, 132, 159, 71, 144, 47, 212, 98, 179, 230, 84, 50, 151, 151, 255, 98, 148, 83, 204, 76, 158, 225, 59, 96, 140, 53, 125, 203, 255, 145, 222, 164, 104, 132, 95, 114, 121, 255, 232, 121, 114, 39, 91, 254, 17, 197, 252, 211, 214, 127, 253, 156, 189, 201, 74, 148, 156, 127, 209, 9, 203, 236, 211, 200, 167, 127, 200, 167, 58, 119, 82, 62, 104, 36, 208, 212, 32, 242, 52, 81, 12, 206, 96, 41, 67, 54, 178, 0, 7, 4, 161, 47, 9, 109, 249, 38, 113, 249, 127, 235, 29, 86, 104, 86, 40, 165, 176, 157, 195, 157, 39, 39, 68, 1, 33, 137, 69, 4, 101, 183, 85, 158, 10, 25, 64, 164, 96, 157, 163, 234, 17, 10, 105, 208, 227, 8, 59, 28, 199, 231, 156, 230, 42, 157, 162, 24, 150, 171, 59, 168, 115, 206, 121, 45, 119, 66, 109, 249, 223, 157, 45, 118, 249, 217, 191, 58, 234, 119, 59, 210, 191, 85, 255, 254, 166, 238, 99, 92, 199, 160, 51, 218, 213, 182, 127, 41, 40, 164, 32, 229, 85, 3, 6, 165, 0, 85, 19, 168, 49, 28, 25, 245, 10, 30, 245, 88, 242, 30, 206, 149, 202, 139, 75, 45, 169, 2, 18, 234, 20, 207, 212, 233, 88, 154, 129, 108, 249, 255, 251, 96, 196, 18, 0, 15, 13, 105, 26, 199, 152, 89, 9, 165, 150, 100, 37, 150, 24, 184, 173, 185, 119, 73, 215, 211, 63, 29, 203, 148, 229, 57, 199, 62, 238, 138, 144, 10, 136, 205, 190, 252, 253, 158, 219, 100, 205, 199, 78, 21, 80, 25, 226, 94, 166, 206, 247, 46, 82, 7, 32, 49, 159, 89, 44, 211, 116, 133, 122, 29, 58, 235, 43, 59, 182, 140, 137, 116, 67, 171, 148, 141, 35, 94, 229, 236, 222, 169, 66, 18, 62, 170, 0, 206, 28, 8, 215, 211, 242, 56, 66, 74, 155, 212, 141, 75, 18, 80, 168, 1, 210, 24, 240, 44, 18, 3, 109, 30, 253, 45, 48, 127, 104, 65, 189, 215, 173, 30, 236, 169, 100, 133, 107, 138, 75, 110, 152, 205, 96, 238, 110, 16, 15, 72, 156, 183, 215, 114, 148, 123, 100, 126, 205, 173, 140, 89, 88, 117, 236, 184, 161, 109, 22, 217, 95, 91, 19, 215, 111, 242, 246, 38, 208, 144, 184, 50, 30, 50, 91, 104, 4, 79, 28, 42, 12, 26, 175, 164, 161, 48, 250, 41, 194, 33, 228, 45, 65, 95, 241, 97, 200, 235, 72, 8, 60, 231, 83, 90, 24, 109, 2, 64, 82, 148, 4, 3, 82, 55, 212, 38, 24, 199, 60, 78, 226, 254, 170, 149, 220, 174, 76, 228, 148, 236, 67, 143, 10, 145, 50, 218, 149, 207, 161, 159, 133, 232, 40, 187, 95, 68, 76, 74, 244, 255, 52, 178, 100, 208, 238, 207, 255, 251, 64, 196, 25, 0, 11, 240, 131, 31, 39, 176, 205, 1, 144, 25, 100, 165, 131, 14, 152, 157, 146, 107, 93, 238, 68, 104, 225, 16, 206, 23, 6, 34, 52, 181, 196, 230, 16, 166, 37, 106, 72, 101, 12, 176, 84, 200, 246, 240, 102, 218, 26, 143, 247, 95, 210, 135, 247, 36, 178, 233, 27, 74, 140, 46, 162, 46, 90, 61, 234, 160, 130, 8, 197, 14, 54, 105, 106, 129, 50, 71, 145, 192, 103, 14, 236, 51, 27, 158, 112, 169, 227, 238, 123, 82, 135, 247, 73, 79, 122, 245, 93, 88, 183, 9, 121, 147, 145, 149, 96, 122, 249, 123, 9, 148, 135, 158, 215, 79, 139, 37, 34, 162, 187, 120, 37, 23, 211, 255, 180, 141, 137, 202, 11, 174, 137, 216, 35, 166, 249, 56, 130, 32, 76, 92, 60, 84, 10, 84, 85, 161, 134, 180, 60, 85, 123, 189, 187, 147, 115, 249, 175, 255, 254, 145, 101, 16, 192, 16, 0, 24, 5, 193, 52, 130, 88, 69, 214, 197, 217, 131, 255, 251, 128, 196, 7, 128, 13, 101, 17, 33, 53, 148, 0, 3, 209, 193, 165, 119, 55, 64, 1, 216, 213, 217, 3, 187, 27, 137, 206, 233, 186, 195, 112, 244, 132, 22, 135, 98, 56, 192, 247, 50, 195, 163, 68, 192, 4, 13, 22, 116, 72, 179, 205, 82, 203, 209, 113, 253, 238, 181, 231, 24, 111, 207, 67, 184, 138, 238, 174, 166, 221, 226, 42, 78, 134, 81, 147, 57, 13, 77, 199, 212, 213, 243, 252, 47, 124, 127, 93, 69, 77, 124, 255, 95, 44, 75, 4, 192, 129, 181, 239, 167, 219, 119, 234, 37, 217, 92, 144, 179, 110, 138, 200, 144, 37, 25, 11, 3, 66, 161, 152, 176, 54, 81, 0, 128, 1, 67, 32, 192, 25, 20, 4, 18, 106, 181, 167, 30, 174, 172, 86, 64, 161, 1, 130, 0, 98, 178, 82, 112, 48, 32, 80, 22, 149, 53, 13, 85, 188, 221, 79, 68, 136, 158, 12, 98, 50, 64, 108, 143, 129, 227, 230, 57, 4, 56, 101, 199, 0, 204, 139, 120, 30, 214, 96, 123, 149, 0, 186, 116, 80, 46, 140, 96, 202, 12, 129, 92, 138, 1, 189, 54, 7, 48, 176, 15, 26, 0, 73, 199, 242, 48, 170, 95, 32, 163, 177, 33, 204, 36, 10, 192, 72, 192, 11, 137, 3, 34, 4, 5, 28, 1, 129, 50, 95, 32, 229, 226, 177, 50, 84, 32, 132, 129, 88, 157, 49, 50, 3, 70, 36, 13, 16, 129, 40, 133, 205, 128, 192, 2, 17, 2, 100, 200, 190, 108, 130, 37, 2, 24, 108, 178, 113, 103, 8, 56, 157, 8, 168, 157, 195, 124, 17, 216, 143, 221, 215, 90, 153, 74, 69, 10, 26, 178, 10, 22, 190, 22, 86, 6, 32, 0, 55, 96, 176, 11, 140, 221, 255, 250, 20, 154, 164, 171, 105, 4, 52, 98, 108, 139, 155, 138, 12, 92, 228, 76, 112, 22, 127, 245, 86, 237, 234, 255, 201, 241, 152, 52, 79, 147, 134, 6, 142, 96, 104, 57, 230, 239, 255, 255, 255, 219, 255, 255, 255, 185, 160, 133, 64, 4, 0, 106, 83, 155, 57, 255, 251, 144, 196, 3, 128, 30, 217, 159, 52, 89, 205, 0, 1, 177, 23, 232, 119, 180, 128, 0, 6, 136, 70, 104, 165, 147, 15, 140, 52, 166, 51, 168, 232, 192, 3, 209, 97, 0, 96, 145, 0, 34, 0, 32, 96, 52, 195, 7, 115, 31, 11, 68, 1, 83, 34, 143, 12, 0, 1, 44, 161, 84, 144, 12, 17, 156, 30, 40, 136, 185, 162, 64, 21, 24, 176, 98, 0, 40, 1, 76, 196, 95, 130, 18, 217, 164, 33, 66, 197, 11, 134, 43, 22, 165, 146, 213, 70, 162, 148, 82, 200, 187, 113, 47, 243, 119, 113, 89, 26, 54, 178, 86, 246, 227, 245, 1, 75, 223, 186, 73, 118, 73, 204, 251, 40, 18, 107, 92, 77, 233, 77, 136, 167, 34, 119, 229, 23, 178, 158, 148, 210, 49, 232, 9, 218, 135, 24, 11, 133, 24, 107, 209, 253, 211, 202, 38, 44, 77, 238, 231, 110, 126, 118, 100, 182, 223, 167, 250, 47, 22, 141, 75, 233, 173, 68, 167, 231, 104, 62, 223, 235, 88, 227, 102, 51, 91, 123, 135, 100, 244, 83, 211, 80, 85, 120, 122, 151, 118, 111, 89, 166, 169, 75, 102, 93, 250, 173, 98, 182, 120, 243, 44, 107, 111, 91, 179, 8, 173, 94, 61, 86, 126, 149, 221, 181, 5, 193, 148, 211, 214, 173, 126, 177, 165, 194, 215, 49, 183, 127, 11, 216, 103, 188, 191, 152, 107, 243, 207, 95, 251, 253, 255, 49, 175, 255, 234, 60, 207, 255, 180, 0, 33, 0, 0, 1, 69, 169, 41, 137, 212, 101, 137, 149, 79, 54, 112, 97, 117, 232, 129, 203, 245, 181, 150, 189, 239, 20, 118, 157, 224, 110, 109, 145, 229, 6, 162, 16, 18, 16, 8, 16, 75, 18, 135, 161, 216, 161, 101, 49, 42, 136, 202, 189, 40, 134, 226, 67, 69, 33, 246, 104, 115, 34, 31, 150, 87, 183, 82, 105, 97, 155, 218, 249, 132, 251, 74, 94, 47, 107, 198, 154, 194, 106, 2, 206, 160, 248, 101, 96, 145, 131, 210, 76, 232, 178, 214, 197, 8, 109, 220, 223, 115, 240, 231, 15, 88, 173, 104, 1, 90, 243, 6, 69, 140, 146, 102, 102, 168, 44, 20, 21, 152, 8, 16, 173, 201, 196, 142, 208, 205, 214, 54, 187, 87, 91, 80, 115, 20, 161, 192, 43, 8, 106, 14, 130, 102, 74, 229, 101, 68, 165, 166, 208, 45, 94, 122, 255, 251, 80, 196, 24, 1, 14, 104, 215, 54, 78, 48, 111, 65, 154, 158, 39, 53, 167, 140, 184, 210, 182, 86, 201, 218, 242, 113, 243, 125, 107, 173, 183, 194, 196, 113, 192, 45, 40, 145, 44, 58, 183, 175, 230, 80, 59, 203, 4, 164, 255, 156, 59, 86, 87, 83, 141, 38, 113, 196, 49, 96, 224, 141, 0, 146, 144, 71, 105, 38, 92, 225, 53, 163, 218, 121, 101, 116, 32, 171, 70, 184, 107, 177, 49, 46, 234, 186, 64, 6, 64, 1, 73, 73, 13, 44, 35, 80, 134, 11, 14, 12, 58, 17, 185, 157, 138, 196, 40, 131, 168, 138, 228, 82, 30, 110, 195, 36, 226, 210, 76, 159, 54, 181, 217, 137, 116, 166, 86, 190, 140, 155, 129, 129, 40, 249, 161, 186, 156, 174, 40, 84, 99, 60, 190, 147, 162, 35, 150, 73, 210, 84, 57, 26, 34, 194, 252, 139, 239, 153, 91, 243, 159, 157, 185, 93, 246, 39, 175, 196, 24, 31, 67, 139, 57, 249, 74, 70, 67, 109, 87, 232, 117, 148, 71, 43, 165, 250, 146, 135, 210, 2, 160, 0, 0, 18, 45, 67, 166, 204, 247, 33, 26, 4, 16, 85, 21, 165, 255, 251, 96, 196, 8, 129, 12, 216, 243, 55, 77, 48, 107, 130, 1, 30, 38, 229, 166, 14, 49, 81, 198, 4, 235, 196, 223, 199, 172, 154, 21, 130, 35, 224, 23, 25, 7, 199, 120, 73, 98, 37, 148, 70, 86, 232, 95, 172, 81, 210, 92, 129, 175, 214, 154, 187, 226, 117, 47, 101, 204, 215, 33, 228, 143, 205, 8, 201, 40, 45, 138, 234, 217, 243, 181, 75, 105, 115, 203, 82, 203, 208, 249, 97, 201, 39, 32, 6, 22, 121, 145, 163, 27, 247, 48, 183, 254, 242, 36, 129, 95, 90, 49, 181, 177, 22, 164, 0, 128, 164, 252, 77, 33, 206, 96, 246, 172, 102, 41, 78, 235, 189, 9, 89, 28, 113, 223, 133, 135, 70, 196, 193, 64, 155, 29, 110, 115, 75, 161, 235, 143, 14, 163, 209, 136, 126, 88, 29, 12, 235, 176, 37, 41, 22, 75, 100, 180, 46, 195, 155, 30, 63, 122, 61, 63, 75, 243, 108, 64, 128, 172, 237, 24, 232, 102, 145, 42, 37, 85, 140, 193, 123, 93, 71, 221, 122, 141, 193, 23, 222, 194, 203, 151, 249, 94, 111, 223, 47, 147, 174, 236, 70, 156, 220, 4, 39, 128, 246, 105, 205, 107, 240, 245, 51, 8, 54, 175, 255, 45, 57, 111, 235, 87, 189, 39, 200, 69, 111, 195, 85, 58, 67, 229, 195, 122, 16, 0, 18, 82, 114, 2, 98, 77, 53, 4, 68, 7, 13, 1, 131, 225, 11, 26, 1, 135, 163, 148, 46, 12, 244, 97, 255, 251, 96, 196, 13, 1, 13, 88, 243, 56, 237, 152, 81, 1, 190, 172, 38, 37, 179, 10, 96, 84, 146, 250, 47, 27, 134, 98, 191, 12, 132, 128, 74, 56, 10, 137, 53, 151, 146, 147, 220, 238, 120, 162, 70, 31, 153, 155, 114, 247, 161, 135, 170, 176, 84, 103, 171, 219, 103, 50, 45, 232, 172, 215, 203, 209, 172, 143, 210, 139, 204, 70, 145, 208, 165, 36, 36, 29, 112, 84, 121, 217, 107, 180, 19, 4, 253, 209, 56, 202, 212, 146, 129, 192, 210, 186, 108, 136, 137, 146, 61, 160, 8, 0, 5, 188, 205, 239, 206, 53, 40, 191, 192, 98, 99, 0, 15, 110, 51, 142, 12, 25, 30, 121, 160, 185, 3, 236, 245, 190, 235, 21, 248, 248, 180, 106, 142, 89, 106, 82, 239, 155, 0, 168, 18, 77, 67, 26, 72, 180, 203, 156, 11, 156, 171, 221, 237, 136, 157, 25, 146, 165, 181, 222, 231, 131, 21, 172, 86, 70, 42, 222, 168, 215, 163, 61, 91, 107, 208, 228, 110, 233, 84, 187, 6, 103, 186, 26, 105, 216, 255, 218, 71, 107, 187, 43, 177, 202, 170, 222, 155, 111, 85, 212, 149, 85, 81, 53, 94, 89, 153, 84, 192, 85, 12, 185, 130, 68, 0, 74, 106, 70, 96, 72, 68, 18, 221, 82, 245, 208, 251, 15, 34, 96, 80, 122, 53, 24, 156, 2, 71, 103, 98, 179, 100, 27, 188, 137, 237, 97, 230, 122, 62, 117, 137, 40, 41, 234, 99, 28, 167, 255, 251, 64, 196, 23, 128, 12, 0, 167, 57, 172, 176, 101, 201, 132, 30, 38, 113, 166, 12, 120, 43, 19, 165, 102, 172, 90, 247, 59, 9, 27, 235, 105, 210, 39, 193, 185, 185, 192, 95, 174, 51, 252, 187, 249, 162, 98, 246, 208, 195, 35, 129, 212, 82, 162, 30, 199, 43, 50, 214, 249, 157, 191, 244, 116, 111, 222, 173, 187, 252, 0, 199, 80, 68, 6, 136, 216, 88, 240, 157, 228, 37, 169, 99, 194, 224, 52, 62, 201, 21, 40, 8, 6, 70, 231, 6, 197, 62, 57, 72, 188, 201, 115, 139, 168, 117, 66, 136, 34, 29, 77, 22, 79, 90, 36, 19, 143, 14, 137, 42, 19, 134, 225, 249, 2, 115, 62, 253, 174, 68, 92, 246, 242, 38, 47, 57, 150, 127, 247, 56, 101, 180, 207, 246, 187, 131, 24, 57, 11, 187, 242, 55, 175, 249, 195, 70, 204, 130, 215, 50, 196, 88, 244, 162, 210, 214, 157, 14, 111, 101, 45, 127, 89, 121, 208, 69, 162, 43, 135, 224, 85, 224, 255, 251, 80, 196, 7, 128, 11, 221, 3, 59, 140, 48, 97, 225, 118, 29, 164, 225, 182, 12, 184, 120, 61, 76, 44, 100, 121, 36, 136, 71, 199, 167, 0, 77, 28, 54, 150, 14, 140, 173, 44, 12, 52, 48, 17, 210, 180, 39, 117, 1, 51, 77, 96, 229, 152, 110, 38, 116, 217, 180, 35, 41, 38, 121, 27, 249, 186, 78, 169, 19, 182, 95, 254, 191, 159, 199, 57, 147, 45, 58, 51, 45, 35, 83, 5, 167, 78, 81, 78, 125, 25, 26, 146, 177, 235, 23, 18, 219, 246, 246, 212, 19, 64, 0, 12, 114, 173, 128, 41, 82, 236, 40, 100, 73, 169, 139, 194, 96, 200, 185, 9, 192, 13, 58, 35, 172, 60, 131, 75, 70, 52, 218, 242, 216, 20, 70, 155, 232, 52, 19, 38, 40, 136, 226, 141, 5, 253, 39, 128, 216, 240, 10, 22, 52, 53, 71, 38, 243, 34, 32, 98, 20, 139, 149, 241, 149, 6, 50, 255, 254, 177, 155, 177, 146, 105, 213, 211, 112, 152, 52, 22, 121, 48, 157, 63, 8, 37, 147, 95, 212, 254, 223, 255, 253, 74, 4, 168, 200, 72, 10, 1, 104, 217, 177, 228, 19, 236, 153, 255, 251, 80, 196, 6, 128, 11, 241, 3, 41, 141, 48, 101, 193, 122, 158, 100, 165, 161, 154, 120, 155, 57, 65, 25, 144, 232, 30, 186, 72, 35, 174, 171, 135, 78, 22, 217, 86, 218, 172, 237, 235, 212, 194, 24, 29, 130, 188, 88, 206, 140, 20, 193, 55, 46, 16, 42, 72, 196, 161, 56, 103, 156, 51, 254, 199, 177, 179, 154, 253, 132, 22, 121, 175, 255, 240, 191, 168, 113, 11, 138, 185, 134, 16, 37, 56, 222, 50, 55, 162, 160, 56, 196, 27, 61, 201, 101, 202, 34, 84, 143, 255, 170, 144, 234, 146, 4, 64, 144, 78, 193, 16, 151, 170, 72, 220, 30, 185, 93, 4, 183, 42, 105, 215, 6, 154, 146, 244, 174, 91, 126, 197, 38, 116, 178, 219, 85, 116, 12, 32, 0, 33, 34, 45, 102, 52, 34, 6, 162, 134, 217, 171, 25, 114, 5, 23, 170, 84, 124, 138, 249, 14, 24, 171, 153, 119, 145, 13, 149, 100, 186, 255, 247, 58, 221, 188, 1, 167, 188, 12, 26, 160, 43, 192, 32, 136, 112, 17, 172, 63, 40, 166, 51, 127, 254, 191, 255, 245, 213, 5, 98, 0, 0, 56, 71, 64, 1, 20, 255, 251, 80, 196, 4, 128, 11, 164, 245, 33, 13, 36, 103, 193, 125, 29, 227, 153, 166, 32, 168, 5, 45, 24, 20, 94, 134, 50, 36, 162, 194, 32, 24, 80, 13, 153, 35, 81, 152, 39, 104, 54, 229, 172, 156, 232, 76, 46, 59, 103, 90, 99, 207, 103, 2, 11, 151, 134, 21, 159, 96, 177, 133, 9, 18, 164, 208, 193, 205, 160, 81, 145, 217, 212, 86, 64, 215, 98, 117, 140, 95, 63, 254, 255, 204, 134, 12, 253, 10, 62, 72, 32, 120, 246, 143, 254, 207, 255, 213, 255, 187, 72, 163, 241, 181, 173, 146, 0, 64, 63, 40, 201, 68, 180, 150, 108, 156, 183, 7, 64, 58, 146, 44, 168, 62, 30, 175, 117, 17, 94, 24, 85, 37, 62, 227, 21, 18, 4, 192, 76, 64, 130, 4, 3, 142, 146, 148, 201, 133, 130, 210, 126, 27, 123, 247, 28, 230, 167, 98, 246, 171, 119, 227, 100, 61, 169, 158, 44, 217, 225, 136, 99, 237, 174, 184, 143, 248, 249, 169, 231, 134, 141, 134, 15, 104, 53, 104, 234, 254, 223, 255, 251, 191, 107, 212, 43, 120, 81, 165, 3, 202, 0, 1, 128, 128, 80, 13, 159, 255, 251, 80, 196, 3, 128, 11, 204, 227, 27, 45, 37, 7, 193, 80, 20, 35, 229, 164, 152, 112, 128, 134, 105, 228, 205, 90, 68, 3, 14, 75, 37, 156, 233, 50, 0, 112, 80, 48, 6, 197, 153, 50, 211, 246, 252, 35, 160, 51, 122, 89, 119, 94, 13, 205, 246, 32, 225, 14, 187, 231, 53, 110, 36, 217, 235, 44, 105, 147, 54, 179, 203, 26, 150, 44, 246, 221, 32, 82, 203, 91, 89, 31, 205, 207, 247, 29, 92, 95, 21, 215, 142, 54, 96, 54, 191, 253, 159, 255, 255, 221, 66, 234, 96, 172, 232, 20, 93, 35, 9, 82, 95, 205, 65, 73, 64, 192, 11, 218, 108, 44, 41, 86, 86, 205, 104, 176, 168, 42, 16, 21, 18, 19, 137, 38, 85, 157, 154, 32, 218, 51, 86, 163, 230, 85, 159, 252, 96, 193, 9, 124, 124, 121, 155, 195, 156, 203, 238, 236, 123, 77, 71, 223, 243, 93, 170, 78, 52, 31, 121, 209, 24, 128, 111, 70, 40, 208, 169, 2, 116, 211, 244, 70, 93, 201, 108, 251, 127, 244, 126, 162, 51, 181, 5, 6, 129, 116, 73, 0, 89, 131, 225, 5, 80, 180, 172, 98, 165, 255, 251, 64, 196, 7, 128, 10, 148, 185, 27, 40, 177, 1, 193, 57, 149, 34, 201, 166, 20, 248, 184, 185, 106, 65, 216, 107, 17, 22, 150, 32, 44, 192, 185, 127, 138, 192, 128, 209, 107, 178, 200, 175, 159, 246, 22, 171, 139, 26, 245, 157, 179, 119, 243, 99, 237, 105, 191, 175, 233, 45, 220, 163, 4, 46, 214, 50, 32, 154, 61, 31, 22, 122, 116, 142, 76, 198, 132, 118, 187, 255, 255, 190, 208, 194, 133, 37, 214, 147, 8, 99, 8, 2, 30, 87, 140, 229, 139, 85, 251, 148, 53, 43, 92, 74, 173, 242, 211, 183, 101, 245, 52, 123, 247, 216, 187, 103, 171, 197, 145, 174, 63, 170, 249, 21, 191, 19, 5, 17, 84, 69, 158, 206, 98, 140, 71, 100, 83, 129, 134, 58, 175, 238, 132, 209, 130, 166, 144, 159, 169, 254, 238, 143, 254, 159, 171, 254, 255, 72, 173, 137, 24, 76, 115, 64, 163, 102, 142, 18, 22, 85, 131, 144, 217, 35, 221, 59, 76, 217, 73, 220, 134, 255, 251, 48, 196, 6, 130, 10, 36, 167, 22, 76, 36, 165, 193, 8, 8, 163, 25, 147, 20, 56, 20, 161, 205, 92, 199, 19, 150, 75, 111, 115, 249, 193, 49, 107, 42, 3, 56, 147, 93, 186, 160, 195, 108, 149, 204, 98, 141, 68, 84, 21, 5, 153, 27, 245, 70, 57, 88, 84, 123, 196, 163, 7, 39, 113, 110, 153, 70, 185, 44, 42, 186, 63, 98, 141, 86, 87, 103, 245, 251, 62, 245, 138, 1, 218, 194, 101, 69, 134, 146, 229, 123, 1, 236, 176, 74, 162, 32, 100, 209, 153, 107, 93, 33, 95, 77, 211, 171, 119, 225, 209, 209, 48, 81, 196, 177, 162, 124, 68, 218, 217, 67, 190, 234, 4, 201, 255, 13, 48, 170, 146, 184, 8, 185, 85, 122, 31, 225, 63, 171, 208, 255, 236, 148, 47, 27, 67, 0, 229, 138, 9, 1, 161, 97, 103, 42, 255, 251, 64, 196, 0, 2, 9, 173, 169, 18, 204, 24, 161, 201, 75, 182, 161, 84, 208, 154, 248, 0, 72, 209, 48, 27, 106, 19, 96, 161, 3, 161, 41, 57, 172, 164, 152, 61, 156, 185, 198, 109, 232, 34, 1, 73, 49, 215, 249, 155, 247, 251, 117, 67, 245, 254, 239, 156, 198, 79, 79, 253, 59, 106, 149, 123, 149, 204, 147, 174, 143, 93, 9, 211, 203, 214, 147, 81, 255, 233, 250, 127, 254, 234, 213, 85, 109, 116, 118, 90, 189, 161, 214, 114, 12, 67, 140, 182, 102, 0, 130, 200, 97, 11, 198, 38, 39, 15, 162, 173, 109, 73, 101, 211, 93, 42, 95, 82, 101, 214, 233, 45, 126, 111, 255, 255, 127, 254, 103, 231, 197, 207, 217, 40, 130, 142, 39, 21, 230, 138, 141, 148, 203, 132, 68, 114, 53, 145, 252, 253, 229, 148, 175, 247, 197, 255, 239, 229, 159, 219, 61, 118, 215, 172, 220, 132, 216, 216, 228, 105, 41, 49, 172, 14, 165, 141, 3, 49, 66, 78, 71, 106, 255, 251, 16, 196, 0, 3, 196, 173, 173, 5, 35, 128, 81, 200, 0, 0, 52, 128, 0, 0, 4, 7, 12, 0, 0, 23, 2, 16, 148, 227, 158, 235, 237, 255, 255, 255, 204, 142, 191, 253, 127, 254, 90, 63, 255, 255, 255, 255, 255, 155, 249, 75, 49, 158, 134, 50, 137, 66, 181, 76, 65, 77, 69, 51, 46, 57, 57, 46, 53, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85 )

[sub_resource type="Animation" id=10]
resource_name = "出现动画"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 0.4, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 )
}

[sub_resource type="Animation" id=9]
resource_name = "加分动画"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Area2D/Label:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Area2D/Label:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.25, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4 )
}

[node name="Node2D" type="Node2D"]
pause_mode = 2
material = SubResource( 5 )
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Line2D3" type="Line2D" parent="StaticBody2D"]
points = PoolVector2Array( 240, 0, 240, 720 )
width = 480.0
default_color = Color( 1, 0.909804, 0.615686, 1 )

[node name="land" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 240, 640 )
shape = SubResource( 3 )

[node name="leftWall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 300 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="rightWall" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 480, 300 )
rotation = -1.5708
shape = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="StaticBody2D"]
points = PoolVector2Array( 0, 640, 480, 640 )
default_color = Color( 0.713726, 0.541176, 0.317647, 1 )
antialiased = true

[node name="Line2D2" type="Line2D" parent="StaticBody2D"]
points = PoolVector2Array( 0, 680, 480, 680 )
width = 80.0
default_color = Color( 0.482353, 0.329412, 0.219608, 1 )

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 240, 60 )
shape = SubResource( 8 )

[node name="top" type="Line2D" parent="Area2D"]
visible = false
points = PoolVector2Array( 0, 120, 480, 120 )
width = 3.0
default_color = Color( 1, 0.4, 0.415686, 1 )

[node name="Label" type="Label" parent="Area2D"]
margin_left = 14.0
margin_top = 14.0
margin_right = 130.0
margin_bottom = 58.0
custom_colors/font_color = Color( 1, 0.890196, 0.145098, 1 )
custom_colors/font_outline_modulate = Color( 0.592157, 0.298039, 0.117647, 1 )
custom_fonts/font = SubResource( 7 )
text = "得分：0"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -200, -50 )
z_index = 2

[node name="mask" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="ColorRect" type="ColorRect" parent="mask"]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.619608 )

[node name="WindowDialog" type="WindowDialog" parent="mask/ColorRect"]
visible = true
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -460.0
margin_right = -90.0
margin_bottom = -260.0
popup_exclusive = true

[node name="Label" type="Label" parent="mask/ColorRect/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -11.0
margin_right = 42.5
margin_bottom = 11.0
text = "Game Over"

[node name="PopupDialog" type="PopupDialog" parent="mask"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = 150.0
popup_exclusive = true

[node name="Label" type="Label" parent="mask/PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -49.0
margin_right = 41.0
margin_bottom = -27.0
text = "暂停中……"

[node name="TextureButton" type="TextureButton" parent="mask/PopupDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -115.0
margin_right = 35.0
margin_bottom = -35.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Node2D" type="Node2D" parent="mask"]
position = Vector2( -150, -100 )
z_index = 10

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.895
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/出现动画" = SubResource( 10 )
"anims/加分动画" = SubResource( 9 )

[node name="audio_win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 392.0
margin_top = 2.0
margin_right = 474.0
margin_bottom = 49.0
rect_rotation = 37.8957
rect_scale = Vector2( 2, 2 )
text = "by lzw
developing"

[connection signal="body_entered" from="Area2D" to="." method="_on_fruit_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_fruit_exited"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_fruit_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_fruit_exited"]
